# LMS-Extract

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/lms-extract/: browser_auth.py
src/lms_extrafiliator/: __init__.py  cli.py  config.py  course_names.py  downloader.py  errors.py  manifest.py  models.py  moodle.py  parser.py  utils.py
tests/: test_cli.py  test_downloader.py  test_manifest.py  test_moodle_client.py  test_parser.py  test_utils.py
