[project]
name = "lms-extrafiliator"
version = "0.1.0"
description = "CLI downloader for authorized Moodle LMS course files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.0",
    "playwright>=1.45.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "respx>=0.21.1",
]

[project.scripts]
lms-extract = "lms_extrafiliator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

